--- a/templates/base.phtml
+++ b/templates/base.phtml
@@ -118,6 +118,7 @@
 
     <script type="text/javascript" src="js/config.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/rdv.js"></script>
 </body>
 
 </html>
