--- a/css/accueil.css
+++ b/css/accueil.css
@@ -24,6 +24,7 @@ body {
     font-size: 3em;
     font-weight: 700;
     color: #e7e7e7;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 .Accueil button {
