--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,15 @@ body {
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
 	overflow-x: hidden !important;
-
+	opacity: 0;
+	transition: opacity 0.9s ease-in-out;
+	-webkit-transition: opacity 0.9s ease-in-out;
+	-moz-transition: opacity 0.9s ease-in-out;
+	-ms-transition: opacity 0.9s ease-in-out;
+	-o-transition: opacity 0.9s ease-in-out;
 }
+
+
 
 
 header {
