--- a/templates/account.phtml
+++ b/templates/account.phtml
@@ -1,17 +1,21 @@
-<section class= "Account">
+<section class="Account">
   <div class="COMPTE">
     <h1>Mon compte</h1>
-    <div class ="compteinfo">
-    <p class ="Preinfo">Nom : </p>  <p> <?php echo getUserName($pdo, $_SESSION['user_id']); ?></p>
+    <div class="compteinfo">
+      <p class="Preinfo">Nom : </p>
+      <p> <?php echo getUserName($pdo, $_SESSION['user_id']); ?></p>
     </div>
-    <div class ="compteinfo">
-    <p class ="Preinfo">Prénom : </p>  <p> <?php echo getUserFirstname($pdo, $_SESSION['user_id']); ?></p>
+    <div class="compteinfo">
+      <p class="Preinfo">Prénom : </p>
+      <p> <?php echo getUserFirstname($pdo, $_SESSION['user_id']); ?></p>
     </div>
-    <div class ="compteinfo">
-    <p class ="Preinfo">E-mail :</p>  <p>  <?php echo getUserEmail($pdo, $_SESSION['user_id']); ?></p>
+    <div class="compteinfo">
+      <p class="Preinfo">E-mail :</p>
+      <p> <?php echo getUserEmail($pdo, $_SESSION['user_id']); ?></p>
     </div>
-    <div class ="compteinfo">
-    <p class ="Preinfo">Votre âge : </p>  <p>  <?php echo getUserAge($pdo, $_SESSION['user_id']); ?> ans</p>
+    <div class="compteinfo">
+      <p class="Preinfo">Votre âge : </p>
+      <p> <?php echo getUserAge($pdo, $_SESSION['user_id']); ?> ans</p>
     </div>
 
     <form method="post" action="account" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer votre compte ?')">
