--- a/templates/mesrdv.phtml
+++ b/templates/mesrdv.phtml
@@ -4,30 +4,19 @@
 
 </div>
 
+
+<?php if (empty($rdvs)) { ?>
+    <h2 class="noRdv">Vous n'avez aucun rendez-vous</h2>
+<?php } else { ?>
+
 <section class="LesRDV">
-    <!-- 
-    <?php foreach ($rdvs as $rdv) { ?>
-         <div class="Rdv" id="rdv-<?php echo $rdv['id']; ?>">
-         
-            <p>
-                Rendez-vous avec le médecin <?= $rdv['nom_medecin'] ?> <br>
-                Le <?php echo $formatter->format($date); ?> <?= date('d/m/Y', strtotime($rdv['date'])) ?> à <?= date('H:i', strtotime($rdv['heure'])) ?> à <?= $rdv['ville_medecin'] ?>
 
-            <form method="post" action="rdvsupp">
-                <input type="hidden" name="rdv_id" value="<?php echo $rdv['id']; ?>">
-
-                <button class="supprimer-rdv" type="button" data-rdv-id="<?php echo $rdv['id']; ?>" onclick="supprimerRdv(this)"> &times; Supprimer mon rendez-vous</button>
-
-            </form>
-            </p>
-        </div>
-    <?php } ?> -->
     <?php foreach ($rdvs as $rdv) { ?>
         <div class="Rdv" id="rdv-<?php echo $rdv['id']; ?>">
             <div class="Rdv-header">
                 <div class="Rdv-header-icon"><i class="fas fa-calendar-alt"></i></div>
                 <div class="Rdv-header-date">
-                <p><?php echo ucfirst($formatter->format(strtotime($rdv['date']))); ?> <?= date('d/m/Y', strtotime($rdv['date'])) ?></p>
+                    <p><?php echo ucfirst($formatter->format(strtotime($rdv['date']))); ?> <?= date('d/m/Y', strtotime($rdv['date'])) ?></p>
 
                 </div>
                 <div class="Rdv-header-icon"><i class="fas fa-clock"></i></div>
@@ -49,13 +38,14 @@
             </div>
         </div>
         <div class="Rdv-footer">
-        <form method="post" action="rdvsupp">
-            <input type="hidden" name="rdv_id" value="<?php echo $rdv['id']; ?>">
-            <button class="supprimer-rdv" type="button" data-rdv-id="<?php echo $rdv['id']; ?>" onclick="supprimerRdv(this)"> &times; Annuler le RDV</button>
-        </form>
+            <form method="post" action="rdvsupp">
+                <input type="hidden" name="rdv_id" value="<?php echo $rdv['id']; ?>">
+                <button class="supprimer-rdv" type="button" data-rdv-id="<?php echo $rdv['id']; ?>" onclick="supprimerRdv(this)"> &times; Annuler le RDV</button>
+            </form>
         </div>
         </div>
 
     <?php } ?>
 
 </section>
+<?php } ?>
