--- a/public/base.phtml
+++ b/public/base.phtml
@@ -11,11 +11,12 @@
   <link rel="stylesheet" href="http://localhost/Code/Projet/css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="/css/style.css" rel="stylesheet">
+  <link href="public/css/style.css" rel="stylesheet">
+
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,400&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/2c8b369b04.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link rel="icon" href="./icone.ico">
+  <link rel="icon" href="public/img/icone.ico">
 
 </head>
 
@@ -24,7 +25,7 @@
 
     <nav class="navbar">
       <div class="navbar-left">
-        <a href="Accueil"><img src="img/doctowebline-high-resolution-logo-color-on-transparent-background.png" class="logo" alt="Doctowebline Logo Rendez-vous Docteur En ligne"></a>
+        <a href="Accueil"><img src="public/img/doctowebline-high-resolution-logo-color-on-transparent-background.png" class="logo" alt="Doctowebline Logo Rendez-vous Docteur En ligne"></a>
       </div>
       <div class="navbar-right">
         <ul class="mobile-menu">
@@ -89,7 +90,7 @@
     <footer id="Contact">
       <div class="containerfoot">
         <div class="logofooter">
-          <img src="img/FOOTER.png" alt="Doctowebline logo">
+          <img src="public/img/FOOTER.png" alt="Doctowebline logo">
         </div>
         <div class="info-col">
           <h4>Informations</h4>
