--- a/templates/mesrdv.phtml
+++ b/templates/mesrdv.phtml
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="Rdv-footer">
-            <form method="post" action="rdvsupp">
+            <form method="post" action="Rdvsupp">
                 <input type="hidden" name="rdv_id" value="<?php echo $rdv['id']; ?>">
                 <button class="supprimer-rdv" type="button" data-rdv-id="<?php echo $rdv['id']; ?>" onclick="supprimerRdv(this)"> &times; Annuler le RDV</button>
             </form>
