--- a/templates/rdv.phtml
+++ b/templates/rdv.phtml
@@ -1,7 +1,7 @@
 <div class="login-page">
   <h1>Prendre rendez-vous</h1>
   <div class="form">
-    <form class="login-form" method="POST" action="rdv">
+    <form class="login-form" method="POST" action="Rendez-vous">
       <label for="specialite_id">Spécialité :</label>
       <select id="specialite_id" name="specialite_id">
         <option value="">Sélectionnez une spécialité</option>
