--- a/templates/user.phtml
+++ b/templates/user.phtml
@@ -26,7 +26,7 @@
                             <td><?= $user['nom'] ?></td>
                             <td><?= $user['prenom'] ?></td>
                             <td><?= $user['email'] ?></td>
-                            <td><?= getUserAge($pdo, $user['id']) ?></td>
+                            <td><?php echo $age; ?></td>
                             <td><?= $user['role'] ?></td>
                             <td><a href="deleteUser?user_id=<?= $user['id'] ?>">Supprimer</a></td>
                         </tr>
