--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ body {
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
 	overflow-x: hidden !important;
-	opacity: 1;
+	opacity: 0;
 	transition: opacity 0.9s ease-in-out;
 	-webkit-transition: opacity 0.9s ease-in-out;
 	-moz-transition: opacity 0.9s ease-in-out;
@@ -1193,10 +1193,12 @@ footer h4 {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	border: solid 5px rgba(9, 97, 87, 1);
+	border: solid 5px rgb(255, 255, 255);
 	padding: 50px;
-	background-color: #142457;
+	background: rgb(9,97,87);
+	background: linear-gradient(103deg, rgba(9,97,87,1) 35%, rgba(20,36,87,1) 100%);
 	box-shadow: 30px 20px 6px rgba(0, 0, 0, 0.1);
+	text-shadow: 2px 2px 2px #000000;
 	margin-top: 50px;
 	margin-bottom: 200px;
 	border-radius: 60px;
