--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1400,10 +1400,17 @@ footer h4 {
 	background-color: #890f0f;
 }
 
+.contmention {
+	display: flex;
+	justify-content: center;
+}
+
 .mention {
 	padding: 10px 20px;
 	background-color: #e7e7e7a0;
+	border: solid 5px #ba1212;
 	border-radius: 20px;
+	width: 80%;
 	box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.1);
 	margin-bottom: 300px;
 	margin-top: 100px;
