--- a/templates/account.phtml
+++ b/templates/account.phtml
@@ -21,7 +21,7 @@
 
     <form method="post" action="Moncompte" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer votre compte ?')">
       <input type="hidden" name="delete_account" value="1">
-      <button type="submit" class="supprimer-compte">Supprimer mon compte <i class="fa-solid fa-trash-can"></i></button>
+      <button type="submit" class="supprimer-compte">Supprimer mon compte <i class="fas fa-trash"></i></button>
     </form>
   </div>
 </section>
