--- a/templates/user.phtml
+++ b/templates/user.phtml
@@ -16,8 +16,10 @@
                         <th>Email</th>
                         <th>Date de naissance</th>
                         <th>Rôle</th>
-                        <th>Modifier</th>
-                        <th>Supprimer</th>
+                        <?php if ($_SESSION['isAdmin'] == 2) : ?>
+                            <th>Modifier</th>
+                            <th>Supprimer</th>
+                        <?php endif; ?>
 
                     </tr>
                 </thead>
@@ -44,10 +46,11 @@
                                         </select>
                                         <input type="submit" name="submit" value="Enregistrer">
                                     </form>
-                                <?php endif; ?>
+
 
                             </td>
                             <td><a href="deleteUser?user_id=<?= $user['id'] ?>"><i class="fas fa-trash-alt"></i></a></td>
+                        <?php endif; ?>
                         </tr>
                     <?php endforeach; ?>
                 </tbody>
